<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_view_msg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dip"
    android:background="@drawable/dialog_corners_bg"
    android:gravity="center"
    android:minHeight="150dip"
    android:minWidth="320dip"
    android:orientation="vertical"
    android:padding="0dip" >

    <TextView
        android:id="@+id/dialog_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dip"
        android:padding="15dip"
        android:text="@string/app_name"
        android:textColor="@color/dialog_title"
        android:textSize="18sp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:background="@color/dialog_title_bottom_line"
        android:contentDescription="@null"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog_txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="45dip"
        android:text="@string/app_name"
        android:textColor="@color/C3"
        android:textSize="@dimen/T2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_1px"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:background="@color/v2_bottom_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dip"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_btn_cancel"
            style="@style/custom_dialog_btn"
            android:layout_width="0dip"
            android:layout_height="@dimen/setting_height"
            android:layout_weight="1"
            android:text="@string/txt_cancel"
            android:textColor="@color/C2" />

        <View
            android:id="@+id/dialog_btn_split_line"
            android:layout_width="@dimen/line_1px"
            android:layout_height="match_parent"
            android:background="@color/v2_bottom_line" />

        <Button
            android:id="@+id/dialog_btn_ok"
            style="@style/custom_dialog_btn"
            android:layout_width="0dip"
            android:layout_height="@dimen/setting_height"
            android:layout_weight="1"
            android:text="@string/txt_ok" />
    </LinearLayout>

</LinearLayout>